--- a/index.html
+++ b/index.html
@@ -19,11 +19,15 @@
                     <button id="list" type="button" class="btn btn-success">Get users list</button>
                     <hr>
                     <span>Select user for capturing</span>
-                    <input type="text" id="user" class="form-control" />
+                    <input type="text" id="catch" class="form-control" />
                     <br>
-                    <button id="capture" type="button" class="btn btn-warning">Capture user action</button>
-                </div>
-                <div id="content" class="col-md-6 col-md-offset-1 well"></div>                
+                    <button id="capture" type="button" class="btn btn-warning">Add user's listeners</button>
+                    <button id="remove" type="button" class="btn btn-danger">Remove user's listeners</button>
+                </div>                
+                <div class="col-md-6 col-md-offset-1 well">
+                    <h4>Server information: </h4>
+                    <div id="content"></div>
+                </div>                
             </div>            
         </div>
 
